--- a/Canducci.MongoDB.Repository/Canducci.MongoDB.Repository.csproj
+++ b/Canducci.MongoDB.Repository/Canducci.MongoDB.Repository.csproj
@@ -11,7 +11,8 @@
     <PackageTags>repository mongodb</PackageTags>
     <PackageReleaseNotes>v1.0.0</PackageReleaseNotes>
     <PackageIcon>mongo.png</PackageIcon>
-    <Description>Repository MongoDB</Description>
+    <Description>Add PagedList</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
