--- a/Canducci.MongoDB.Repository/Canducci.MongoDB.Repository.csproj
+++ b/Canducci.MongoDB.Repository/Canducci.MongoDB.Repository.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard1.5;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net48;netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>fulviocanducci</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -12,28 +12,25 @@
     <PackageReleaseNotes>Short methods</PackageReleaseNotes>
     <PackageIcon>mongo.png</PackageIcon>
     <Description>Add PagedList &amp;&amp; add methods</Description>
-    <Version>1.1.1</Version>
+    <Version>2.0.0</Version>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <AssemblyVersion>2.0.0</AssemblyVersion>
+    <FileVersion>2.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net48' ">
     <PackageReference Include="Microsoft.Extensions.Configuration">
       <Version>1.1.2</Version>
     </PackageReference>
   </ItemGroup>
-  
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.5' ">
-    <PackageReference Include="Microsoft.Extensions.Configuration">
-      <Version>1.1.2</Version>
-    </PackageReference>    
-  </ItemGroup>
-  
+    
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.Extensions.Configuration">
-      <Version>3.1.10</Version>
+      <Version>3.1.32</Version>
     </PackageReference>
   </ItemGroup>
   
@@ -41,6 +38,10 @@
     <None Include="..\images\mongo.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
 
